
@startuml
!pragma layout smetana

abstract class User {

}

class Customer {

}

class GuestCustomer {
}

class Carport{

}

class Material {

}
class TotalOrderLine {

}

class OrderLine {

}

class Order {

}

class ListOfOrders {
}

'Aggregation/association (Has-a)
User "1" o-- "0..*" Order
OrderLine "1" o-- "1..*" Material
TotalOrderLine "1" o-- "1" OrderLine

'Composition (part-of)
Order "1" *-- "1" Carport
Order "1" *-- "1..*" TotalOrderLine
ListOfOrders "1" *-- "1..*" Order


'inheritance/Extension (Is-A)
Customer --|> User
GuestCustomer --|> User


@enduml
